tests/baselines/reference/asyncFunctionDeclaration12_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncFunctionDeclaration12_es5.ts(1,24): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncFunctionDeclaration12_es5.ts (1 errors) ====
    var v = async function await(): Promise<void> { }
                           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.